# wordle

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
src/: cheat.rs  game.rs  iter.rs  lib.rs  logic.rs  main.rs  nyt_api.rs  state.rs  words.rs
src/words/: nytimes.rs  original.rs
