[package]
name = "cl-wordle"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Wordle in your terminal"
repository = "https://github.com/conradludgate/wordle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["local-offset", "macros"] }
eyre = "0.6"
owo-colors = "3.2"
crossterm = "0.23"
clap = { version = "3.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
test-case = "1.2.2"

[[bin]]
name = "wordle"
